# dragonglass

./: .env.example  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  README.md  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-bundles.yml  build-opencode-bundle.yml  build-python-bundles.yml  ci.yml  release.yml
DragonglassApp/Dragonglass/: AgentClient.swift  ApprovalView.swift  BackendManager.swift  BackendSettingsSection.swift  BundleInstaller.swift  ChatTimelineView.swift  CollapsedToolSummary.swift  ContentView.swift  ConversationManagerView.swift  CursorDictationSession.swift  DictationKeyRemapper.swift  DragonglassApp.swift  DragonglassConfig.swift  EnvironmentSettingsSection.swift  EventRow.swift  HotkeyManager.swift  InputBarView.swift  KeyRecorderView.swift  Logging.swift  MenuBarManager.swift  MicButton.swift  ModelSettingsSection.swift  ObsidianPluginManager.swift  ObsidianSetupView.swift  OpencodeInstaller.swift  PermissionsSettingsSection.swift  ProcessUtils.swift  PythonInstaller.swift  PythonSettingsSection.swift  PythonSetupView.swift  STTManager.swift  SettingsView.swift  SetupWindowController.swift  SpeechSettingsView.swift  ThinkingRow.swift  ToolCallBadge.swift  ToolPhase.swift  UISettingsSection.swift  UpdateChecker.swift  UpdatesSettingsSection.swift  (+2 more)
DragonglassApp/Dragonglass.xcodeproj/: BundleIntegration.xctestplan  project.pbxproj
DragonglassApp/Dragonglass.xcodeproj/project.xcworkspace/xcshareddata/: WorkspaceSettings.xcsettings
DragonglassApp/Dragonglass.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
DragonglassApp/Dragonglass.xcodeproj/xcshareddata/xcschemes/: Dragonglass.xcscheme
DragonglassApp/Dragonglass.xcodeproj/xcuserdata/antonlu.xcuserdatad/xcschemes/: xcschememanagement.plist
DragonglassApp/DragonglassTests/: BundleInstallerParsingTests.swift  BundleInstallerSubprocessTests.swift
DragonglassApp/Resources/ObsidianPlugin/: main.js  manifest.json
DragonglassApp/opencode/: package.json
DragonglassApp/scripts/: bundle_resources.sh
docs/: agent-loop.md  architecture.md  configuration.md  index.md  macos-app.md  mcp-tools.md  rest-api.md  server-protocol.md
docs/superpowers/plans/: 2026-04-22-dev-bundle-hash.md
docs/superpowers/specs/: 2026-04-22-dev-bundle-hash-design.md
dragonglass/: cli.py  config.py  log.py  log_context.py  paths.py  system_paths.py
dragonglass/agent/: __init__.py  agent.py  approval.py  client.py  headless.py  mcp.py  opencode.py  opencode_addendum.md  parsing.py  prompts.py  runtime.py  system_prompt.md  types.py
dragonglass/bundle/: __main__.py  cache.py  fetcher.py  installer.py  manifest.py  runtime.py  types.py
dragonglass/hybrid_search/: __init__.py  _engine.py  _interfaces.py  _session.py  _types.py
dragonglass/mcp/: __init__.py  omnisearch.py  preview.py  search.py  telemetry.py
dragonglass/mcp/edit/: __init__.py  frontmatter.py  notes.py  tags.py
dragonglass/mcp/search/: __init__.py  frontmatter.py  notes.py  queries.py  tags.py  tools.py
dragonglass/menubar/: agent_thread.py  app.py  obsidian_ping.py  state.py
dragonglass/search/: __init__.py  backends.py  session.py
dragonglass/server/: __init__.py  conversations.py  main.py  models.py  opencode.py  server.py  ws.py
dragonglass/tui/: app.py
scripts/: build_bundle.py  build_opencode_bundle.py  bundle_plugin.sh  compute_deps_hash.py  generate_manifest.py  test_bundle_integration.py  test_full_pipeline.py
tests/: test_build_opencode_bundle.py  test_completion_kwargs.py  test_compute_deps_hash.py  test_config_env_export.py  test_generate_manifest.py  test_logging_paths.py  test_mcp_fetch_graceful.py  test_mcp_frontmatter_tags.py  test_mcp_keyword_search.py  test_mcp_patch_lines.py  test_model_resolution.py  test_reasoning_tool_call_fallback.py  test_server_mcp_startup.py  test_server_model_fallback.py  test_server_ollama_models.py  test_server_opencode_logging.py  test_server_opencode_startup.py
tests/bundle/: test_cache.py  test_cli.py  test_fetcher.py  test_installer.py  test_manifest.py  test_runtime.py  test_types.py
tests/test_hybrid_search/: test_engine.py  test_obsidian_backend.py  test_session.py  test_types.py
