[project]
name = "dragonglass"
dynamic = ["version", "readme"]
description = "LLM-powered Obsidian vault agent with TUI"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
  # hybrid_search package (dragonglass.hybrid_search) — no deps beyond stdlib
  # search / obsidian backend (dragonglass.search)
  "httpx >= 0.28.1",
  "pydantic >= 2.12.5",
  # agent
  "litellm >= 1.81.13, < 1.82.7",
  "opencode-ai == 0.1.0a36",
  "mcp >= 1.26.0",
  # mcp server
  "fastmcp >= 3.0.0",
  # config
  "pydantic-settings >= 2.13.0",
  "python-dotenv >= 1.2.1",
  # tui
  "textual >= 8.0.0",
  # server
  "websockets >= 12.0",
  # misc
  "click >= 8.1",
  "tomli-w >= 1.0.0",
]

[[project.authors]]
name = "Anton Lu"
email = "anton96lu@gmail.com"

[project.urls]
repository = "https://github.com/antolu/dragonglass"

[project.optional-dependencies]
dev = ["pre-commit", "ruff", "mypy"]
test = ["pytest", "pytest-timeout >= 2.1"]

[project.scripts]
dragonglass = "dragonglass.cli:cli"

[build-system]
requires = ["setuptools >= 61", "setuptools-scm[toml] ~= 10.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "dragonglass/_version.py"
local_scheme = "no-local-version"

[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.setuptools.packages.find]
where = ["."]
include = ["dragonglass*"]
namespaces = false

[tool.setuptools.package-data]
dragonglass = ["py.typed"]

[tool.black]
target-version = ["py311"]
line-length = 88
include = '\.pyi?$'

[tool.ruff]
exclude = [
  ".bzr", ".direnv", ".eggs", ".git", ".hg", ".mypy_cache", ".nox",
  ".pants.d", ".pytype", ".ruff_cache", ".svn", ".tox", ".venv",
  "__pypackages__", "_build", "buck-out", "build", "dist",
  "node_modules", "venv", ".venv",
]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
  "F", "E", "W", "I", "N", "UP", "PLC", "PLE", "PLW", "PLR",
  "TRY", "PERF", "RUF",
  "B", "C4", "FBT", "A", "EM", "ISC", "FA", "G", "PIE", "PYI",
  "PT", "Q", "RSE", "RET", "SLF", "SIM",
]
fixable = ["ALL"]
ignore = ["E501", "W505", "ISC001", "PLW2901", "N806", "G004", "TRY003", "EM101", "EM102", "FBT001", "FBT002", "FBT003"]

[tool.ruff.format]
preview = true

[tool.mypy]
disallow_untyped_defs = true
python_version = "3.11"

[[tool.mypy.overrides]]
module = ["litellm.*", "textual.*", "fastmcp.*", "opencode_ai.*"]
ignore_missing_imports = true

[tool.pyright]
reportPrivateImportUsage = "none"

[tool.pytest.ini_options]
timeout = 30
timeout_method = "signal"
